Manage additional service quantity (#1308)
* handle limited availability on additional items
* save values in a dedicated, previously unused table
* move additional item(s) between tickets
* add additional services to PDF